test/types/records/split-init/error-never-initialized-values-mentioned4.good
error-never-initialized-values-mentioned4.chpl:3: In function 'error':
error-never-initialized-values-mentioned4.chpl:5: error: cannot default-initialize a variable with generic type
error-never-initialized-values-mentioned4.chpl:5: note: 'q2' has generic type 'C?'
error-never-initialized-values-mentioned4.chpl:5: note: cannot find initialization point to split-init this variable
error-never-initialized-values-mentioned4.chpl:7: note: 'q2' is used here before it is initialized
